--- a/_bookdown.yml
+++ b/_bookdown.yml
@@ -1,6 +1,6 @@
 book_filename: "CleanCal"
 delete_merged_file: true
-output_dir: _docs
+output_dir: docs
 rmd_files: ["index.Rmd", "01-intro.Rmd"]
 language:
   ui:
